--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "drizzle-orm": "^0.34.0",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.446.0",
     "next": "15.0.3-canary.2",
     "next-auth": "5.0.0-beta.25",
