app hosting secret fix

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,25 +2,25 @@
 env:
     # Get your OpenAI API Key here: https://platform.openai.com/account/api-keys
   - variable: OPENAI_API_KEY
-    secret: myApiKeySecret
+    secret: OPENAI_API_KEY
 
     # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
   - variable: AUTH_SECRET
-    secret: myApiKeySecret
+    secret: AUTH_SECRET
 
     # Instructions to create kv database here: https://vercel.com/docs/storage/vercel-blob
   - variable: BLOB_READ_WRITE_TOKEN
-    secret: myApiKeySecret
+    secret: BLOB_READ_WRITE_TOKEN
 
     # Instructions to create a database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
   - variable: POSTGRES_URL
-    secret: myApiKeySecret
+    secret: POSTGRES_URL
 
   - variable: GOOGLE_CLIENT_ID
-    secret: myApiKeySecret
+    secret: GOOGLE_CLIENT_ID
 
   - variable: GOOGLE_CLIENT_SECRET
-    secret: myApiKeySecret
+    secret: GOOGLE_CLIENT_SECRET
 
   - variable: REDIRECT_URI
     value: api/google_auth/oauth2callback
