Squashed commit of the following:
commit d8771335be587be632ad1ecaef6d9004d7abb927
Merge: 2795df1 f0011dd
Author: Kishy Kumar <kishykumar@gmail.com>
Date:   Tue Nov 19 23:00:02 2024 -0800

    Merge pull request #2 from qarkinc/gsk-main

    Checking whether gmail account is linked or not before submitting

commit 2795df1443bfae313462ec51f8739a720dee88fa
Author: Kishy Kumar <kishykumar@gmail.com>
Date:   Tue Nov 19 22:53:01 2024 -0800

    base url oauth fix

commit adc7f7563604c9202267790f773535e5d85a0f7d
Author: Kishy Kumar <kishykumar@gmail.com>
Date:   Tue Nov 19 21:50:25 2024 -0800

    PROD_APP_URL fix

commit 14681ec497592953d1b1271d62bae8f15eb6335e
Author: Kishy Kumar <kishykumar@gmail.com>
Date:   Tue Nov 19 20:14:45 2024 -0800

    eslint off

commit 0a4fd9c6ebb7f9a1a7dcba0f292f150590a0470b
Author: Kishy Kumar <kishykumar@gmail.com>
Date:   Tue Nov 19 19:53:32 2024 -0800

    redirect uri fix

commit b1743f8fa774c6be0052b98fbd3aa7fcce76a6ad
Merge: e65d20f d7a03b5
Author: Kishy Kumar <kishykumar@gmail.com>
Date:   Tue Nov 19 18:32:52 2024 -0800

    Merge pull request #1 from qarkinc/gsk-main

    Tasks Done

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -26,7 +26,10 @@ env:
     secret: NEXTAUTH_SECRET
 
   - variable: NEXTAUTH_URL
-    value: https://qark-chat.qarkx.com/
+    value: https://app.qarkx.com/
 
   - variable: REDIRECT_URI
     value: api/google_auth/oauth2callback
+
+  - variable: PROD_APP_URL
+    value: https://app.qarkx.com
