--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
     "ai": "4.0.0-canary.9",
+    "ai-chatbot": "link:",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
