--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
+    "start-whatsapp": "ts-node whatsapp/server.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/openai": "1.0.0-canary.3",
+    "@hapi/boom": "^10.0.1",
+    "@opensearch-project/opensearch": "^2.12.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -23,6 +26,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
+    "@whiskeysockets/baileys": "^6.7.9",
     "ai": "4.0.0-canary.9",
     "ai-chatbot": "link:",
     "bcrypt-ts": "^5.0.2",
@@ -37,10 +41,12 @@
     "geist": "^1.3.1",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.446.0",
+    "mongodb": "^6.10.0",
     "next": "15.0.3-canary.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "orderedmap": "^2.1.1",
+    "pino": "^7.0.0",
     "postgres": "^3.4.4",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-inputrules": "^1.4.0",
@@ -80,6 +86,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5"
   }
