--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "1.0.0-canary.3",
+    "@google-cloud/logging": "^11.2.0",
     "@hapi/boom": "^10.0.1",
     "@opensearch-project/opensearch": "^2.12.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
