--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/openai": "1.0.0-canary.3",
+    "@hapi/boom": "^10.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -23,6 +25,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
+    "@whiskeysockets/baileys": "^6.7.9",
     "ai": "4.0.0-canary.9",
     "ai-chatbot": "link:",
     "bcrypt-ts": "^5.0.2",
@@ -36,6 +39,7 @@
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
     "googleapis": "^144.0.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.446.0",
     "next": "15.0.3-canary.2",
     "next-auth": "5.0.0-beta.25",
@@ -53,6 +57,7 @@
     "react": "19.0.0-rc-45804af1-20241021",
     "react-dom": "19.0.0-rc-45804af1-20241021",
     "react-markdown": "^9.0.1",
+    "react-phone-number-input": "^3.4.9",
     "remark-gfm": "^4.0.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
@@ -61,6 +66,7 @@
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.3",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
